
2025-03-26  David Declerck <david.declerck@ocamlpro.com>

	* gentable.c: generate EBCDIC/ASCII translation tables
	* cobc.c, help.c: new --gentable option

2024-12-09  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (cobc.1): add description using help2man -n

2024-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line): fix leak for --copy and -include parsing

2024-10-30  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* typeck.c: define [WITH_EXTENDED_SCREENIO] for any curses headers
	  available, which now includes panel.h definitions

2024-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (output_line_directive): extracted from other places and
	  extended to output compile from stdin as <stdin>
	* codegen.c (output_cobol_info): output compile from stdin as <stdin>
	* cobc.c (cobc_print_version, cobc_print_shortversion,
	  process_command_line): build and package data only shown in verbose mode
	  which does not output the verbose "process" calls by default;
	  PACKAGE_NAME may now be overwritten by PKGVERSION (new configure option)
	* help.c (cobc_print_usage): handle PACKAGE_BUGREPORT_URL as
	  alternative to mailing list, now resolved by PACKAGE_BUGREPORT
	* cobc.c (cobc_sig_handler): skip abort message for SIGPIPE

2024-10-01  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* tree.c (validate_indexed_key_field): warn about ignored collating
	  sequence for non-alphanumeric keys (considers only primary keys and file
	  collating sequence for now)
	* codegen.c (output_indexed_file_key_colseq): assign collating sequence
	  for any key of alphanumeric class, and preliminary handing of NATIONAL
	  collations
	* parser.y: adjust position of messages about unfinished KEY or FILE
	  COLLATING SEQUENCE

2024-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): drop COB_LI_IS_LL
	  in favor of existing COB_32_BIT_LONG

2024-09-27  Simon Sobisch <simonsobisch@gnu.org>
