@@ -149,7 +149,9 @@ cobc_print_usage_common_options (void)
 	puts (_("  -MG                   output missing dependencies without complaining"));
 	puts (_("  -MD                   output dependencies in .d files while compiling"));
 	puts (_("  -ext <extension>      add file extension for resolving COPY"));
+#ifdef EXPERIMENTAL_COPYBOOK_DEPS_OPTION
 	puts (_("  -fcopybook-deps       output copybook names as dependencies"));
+#endif
 	puts (_("  --gentable=<ebcdic-enc>,<ascii-enc>[+]\toutput a translation table between the\n"
 		"                        given encodings to stdout and exit"));
 	putchar ('\n');
